k8s-configs/base/nginx.yaml
apiVersion: apps/v1
kind: Deployment
namespace: ping-cloud
metadata:
  name: nginx
  labels:
    app: nginx
spec:
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
      - image: nginx
        name: nginx
        ports:
        - containerPort: 8080
