k8s-configs/base/custom-patches-sample.yaml

################################################
#                ElasticSearch
################################################

### Update elasticsearch disk size  ###
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: es-cluster
  namespace: elastic-stack-logging
spec:
  volumeClaimTemplates:
  - metadata:
      name: data
      labels:
        app: elasticsearch
    spec:
      accessModes:
      - ReadWriteOnce
      storageClassName: elasticsearch-gp3
      resources:
        requests:
          storage: 40Gi

---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: logstash-elastic
  namespace: elastic-stack-logging
spec:
  template:
    spec:
      containers:
        - name: logstash
          resources:
            limits:
              cpu: "2"
              memory: 4Gi
            requests:
              cpu: "1"
              memory: 2Gi
---

################################################
#                PingDirectory
################################################

### Update pingdirectory disk size, replicas, memory/cpu requests/limits  ###
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: pingdirectory
  namespace: ping-cloud
spec:
  replicas: 3
  volumeClaimTemplates:
  - metadata:
      name: out-dir
      labels:
        app: ping-cloud
        role: pingdirectory
        class: pingdirectory-server
    spec:
      accessModes:
      - ReadWriteOnce
      storageClassName: pingdirectory-gp3
      resources:
        requests:
          storage: 40Gi
  template:
    spec:
      containers:
      - name: pingdirectory
        resources:
          requests:
            memory: "1Gi"
            cpu: "1"
          limits:
            memory: "1Gi"
            cpu: "1"

---

################################################
#               PingAccess-WAS
################################################

### Update pingaccess-was-admin disk size, memory/cpu requests/limits ###
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: pingaccess-was-admin
  namespace: ping-cloud
spec:
  volumeClaimTemplates:
  - metadata:
      name: out-dir
      labels:
        app: ping-cloud
    spec:
      accessModes:
      - ReadWriteOnce
      storageClassName: pingaccess-was-gp3
      resources:
        requests:
          storage: 20Gi
  template:
    spec:
      containers:
      - name: pingaccess-was-admin
        resources:
          requests:
            memory: "1Gi"
            cpu: "1"
          limits:
            memory: "1Gi"
            cpu: "1"

---

### Update pingaccess-was engine replicas, memory/cpu requests/limits  ###
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: pingaccess-was
  namespace: ping-cloud
spec:
  replicas: 3
  template:
    spec:
      containers:
      - name: pingaccess-was
        resources:
          requests:
            memory: "1Gi"
            cpu: "1"
          limits:
            memory: "1Gi"
            cpu: "1"

---

### Update the PingAccess-WAS engine's proxy body size ###
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pingaccess-was-ingress
  namespace: ping-cloud
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: 16m

---
################################################
#                PingFederate
################################################

### Update pingfederate-admin disk size, memory/cpu requests/limits ###
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: pingfederate-admin
  namespace: ping-cloud
spec:
  volumeClaimTemplates:
  - metadata:
      name: out-dir
      labels:
        app: ping-cloud
    spec:
      accessModes:
      - ReadWriteOnce
      storageClassName: pingfederate-gp3
      resources:
        requests:
          storage: 20Gi
  template:
    spec:
      containers:
      - name: pingfederate-admin
        resources:
          requests:
            memory: "1Gi"
            cpu: "1"
          limits:
            memory: "1Gi"
            cpu: "1"

---

### Update pingfederate engine memory/cpu requests/limits  ###
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: pingfederate
  namespace: ping-cloud
spec:
  template:
    spec:
      containers:
      - name: pingfederate
        resources:
          requests:
            memory: "1Gi"
            cpu: "1"
          limits:
            memory: "1Gi"
            cpu: "1"

---

################################################
#                PingAccess
################################################

### Update pingaccess-admin disk size, memory/cpu requests/limits ###
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: pingaccess-admin
  namespace: ping-cloud
spec:
  volumeClaimTemplates:
  - metadata:
      name: out-dir
      labels:
        app: ping-cloud
    spec:
      accessModes:
      - ReadWriteOnce
      storageClassName: pingaccess-gp3
      resources:
        requests:
          storage: 20Gi
  template:
    spec:
      containers:
      - name: pingaccess-admin
        resources:
          requests:
            memory: "1Gi"
            cpu: "1"
          limits:
            memory: "1Gi"
            cpu: "1"

---

### Update pingaccess engine memory/cpu requests/limits  ###
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: pingaccess
  namespace: ping-cloud
spec:
  template:
    spec:
      containers:
      - name: pingaccess
        resources:
          requests:
            memory: "1Gi"
            cpu: "1"
          limits:
            memory: "1Gi"
            cpu: "1"
